basic routes, templates html, styling, logo

--- a/src/ui/pages/index.html
+++ b/src/ui/pages/index.html
@@ -1,5 +1,16 @@
 @@include('../templates/page-head.html')
-    <div class="site-width text-center">
-        <h1>HTML UI Component Library</h1>
+    <div class="site-width">
+        <h1 class="mv-30 text-center">HTML UI Component Library</h1>
+
+        <div class="ui-library-links">
+            <ul>
+                <li>
+                    <a href="accordion.html">Accordion</a>
+                </li>
+                <li>
+                    <a href="accordion.html">Image Accordion</a>
+                </li>
+            </ul>
+        </div>
     </div>
 @@include('../templates/page-footer.html')
