added live reloading

--- a/src/ui/pages/index.html
+++ b/src/ui/pages/index.html
@@ -8,7 +8,7 @@
                     <a href="accordion.html">Accordion</a>
                 </li>
                 <li>
-                    <a href="accordion.html">Image Accordion</a>
+                    <a href="image-accordion.html">Image Accordion</a>
                 </li>
             </ul>
         </div>
