added color, fonts

--- a/src/ui/pages/index.html
+++ b/src/ui/pages/index.html
@@ -1,6 +1,6 @@
 @@include('../templates/page-head.html')
     <div class="site-width">
-        <h1 class="mv-30 text-center">HTML UI Component Library</h1>
+        <h1 class="mv-30 text-center">UI Components</h1>
 
         <div class="ui-library-links">
             <ul>
