--- a/src/ui/pages/image-accordion.html
+++ b/src/ui/pages/image-accordion.html
@@ -1,3 +1,3 @@
 @@include('../templates/page-head.html')
-    <p>testing again and again</p>
+    @@include('../components/image-accordion/image-accordion.html')
 @@include('../templates/page-footer.html')
